; ModuleID = '/home/carl/AnghaBench/sumatrapdf/mupdf/source/fitz/extr_stext-output.c_font_family_name.c'
source_filename = "/home/carl/AnghaBench/sumatrapdf/mupdf/source/fitz/extr_stext-output.c_font_family_name.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [11 x i8] c",monospace\00", align 1
@.str.1 = private unnamed_addr constant [7 x i8] c",serif\00", align 1
@.str.2 = private unnamed_addr constant [12 x i8] c",sans-serif\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i32*, i8*, i32, i32, i32)* @font_family_name to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @font_family_name(i32* %0, i32* %1, i8* %2, i32 %3, i32 %4, i32 %5) #0 {
  %7 = alloca i32*, align 8
  %8 = alloca i32*, align 8
  %9 = alloca i8*, align 8
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca i8*, align 8
  %14 = alloca i8*, align 8
  store i32* %0, i32** %7, align 8
  store i32* %1, i32** %8, align 8
  store i8* %2, i8** %9, align 8
  store i32 %3, i32* %10, align 4
  store i32 %4, i32* %11, align 4
  store i32 %5, i32* %12, align 4
  %15 = load i32*, i32** %7, align 8
  %16 = load i32*, i32** %8, align 8
  %17 = call i8* @font_full_name(i32* %15, i32* %16)
  store i8* %17, i8** %13, align 8
  %18 = load i8*, i8** %9, align 8
  %19 = load i8*, i8** %13, align 8
  %20 = load i32, i32* %10, align 4
  %21 = call i32 @fz_strlcpy(i8* %18, i8* %19, i32 %20)
  %22 = load i8*, i8** %9, align 8
  %23 = call i8* @strrchr(i8* %22, i8 signext 45)
  store i8* %23, i8** %14, align 8
  %24 = load i8*, i8** %14, align 8
  %25 = icmp ne i8* %24, null
  br i1 %25, label %26, label %28

26:                                               ; preds = %6
  %27 = load i8*, i8** %14, align 8
  store i8 0, i8* %27, align 1
  br label %28

28:                                               ; preds = %26, %6
  %29 = load i32, i32* %11, align 4
  %30 = icmp ne i32 %29, 0
  br i1 %30, label %31, label %35

31:                                               ; preds = %28
  %32 = load i8*, i8** %9, align 8
  %33 = load i32, i32* %10, align 4
  %34 = call i32 @fz_strlcat(i8* %32, i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str, i64 0, i64 0), i32 %33)
  br label %43

35:                                               ; preds = %28
  %36 = load i8*, i8** %9, align 8
  %37 = load i32, i32* %12, align 4
  %38 = icmp ne i32 %37, 0
  %39 = zext i1 %38 to i64
  %40 = select i1 %38, i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str.1, i64 0, i64 0), i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str.2, i64 0, i64 0)
  %41 = load i32, i32* %10, align 4
  %42 = call i32 @fz_strlcat(i8* %36, i8* %40, i32 %41)
  br label %43

43:                                               ; preds = %35, %31
  ret void
}

declare dso_local i8* @font_full_name(i32*, i32*) #1

declare dso_local i32 @fz_strlcpy(i8*, i8*, i32) #1

declare dso_local i8* @strrchr(i8*, i8 signext) #1

declare dso_local i32 @fz_strlcat(i8*, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
